--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
     </section><!-- .g_design end -->
 
     <footer>
-        <h3>ParkSungHee</h3>
+        <h3>Park Sung Hee</h3>
         <ul>
             <li><a href="#">유튜브채널 바로가기</a></li>
             <li><a href="tel:010-7118-0379">010.7118.0379</a></li>
